# registered-cpp

./: CMakeLists.txt
include/: CMakeLists.txt  ClockDomain.hpp  Combinational.hpp  Register.hpp  const.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tests.cpp
